--- a/styling/defaults/_color.scss
+++ b/styling/defaults/_color.scss
@@ -1,3 +1,8 @@
 $primary-color: #21453E;
 $secondary-color: #588077;
 $base-color: white;
+$pink: #F95A8A;
+$orange: #FF805F;
+$yellow: #FFC01D;
+$purple: #9F52FF;
+$teal: #15D2B8;
