--- a/styling/pages/diary.css
+++ b/styling/pages/diary.css
@@ -1,15 +1,18 @@
 h1 {
   font-family: "Abril Fatface", cursive;
 }
+
 h2 {
   font-family: "Abril Fatface", cursive;
   text-align: center;
 }
+
 p {
   font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
   line-height: 1.5;
 }
+
 ul li {
   font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
@@ -19,35 +22,37 @@ ul li {
 .name {
   font-family: "Abril Fatface", cursive;
 }
+
 .nav-items {
   font-family: "Raleway", sans-serif;
 }
+
 .signature {
   font-family: "Abril Fatface", cursive;
 }
+
 .webdev {
   font-family: "Raleway", sans-serif;
 }
 
-header {
-  background-color: white;
-  text-align: center;
+label {
+  font-family: "Raleway", sans-serif;
 }
-header .name a {
-  text-decoration: none;
-  color: #21453E;
+
+.form-input {
+  font-family: "Raleway", sans-serif;
 }
-header .nav-items a {
-  color: #21453E;
-  text-decoration: none;
-  padding-bottom: 20px;
+
+.form-message {
+  font-family: "Raleway", sans-serif;
 }
-header .nav-items a:hover {
-  text-decoration: underline;
+
+#submit {
+  font-family: "Raleway", sans-serif;
 }
 
 footer {
-  background-color: #21453E;
+  background-color: #F95A8A;
   color: white;
   padding: 20px;
   display: flex;
@@ -55,11 +60,501 @@ footer {
   flex-grow: 1;
   justify-content: center;
 }
+footer .signature {
+  display: flex;
+  justify-content: center;
+}
+footer .signature img {
+  margin-bottom: -2%;
+  width: 40%;
+  height: auto;
+}
 footer .socials a i {
   text-decoration: none;
   color: white;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
+@media screen and (max-width: 480px) {
+  .signature {
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .signature {
+    font-size: 32px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .signature {
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a i {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
+header {
+  background-color: white;
+  text-align: center;
+}
+header .heading-logo {
+  display: flex;
+  justify-content: center;
+}
+header .heading-logo img {
+  padding-top: 1%;
+  width: 60%;
+  height: auto;
+}
+header .nav-items a {
+  color: black;
+  text-decoration: none;
+  padding-bottom: 20px;
+}
+header .nav-items a:hover {
+  text-decoration: underline;
+}
+
+@media screen and (max-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
+header {
+  background-color: white;
+  text-align: center;
+}
+header .heading-logo {
+  display: flex;
+  justify-content: center;
+}
+header .heading-logo img {
+  padding-top: 1%;
+  width: 60%;
+  height: auto;
+}
+header .nav-items a {
+  color: black;
+  text-decoration: none;
+  padding-bottom: 20px;
+}
+header .nav-items a:hover {
+  text-decoration: underline;
+}
+
+@media screen and (max-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
+footer {
+  background-color: #F95A8A;
+  color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+}
+footer .signature {
+  display: flex;
+  justify-content: center;
+}
+footer .signature img {
+  margin-bottom: -2%;
+  width: 40%;
+  height: auto;
+}
+footer .socials a i {
+  text-decoration: none;
+  color: white;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+@media screen and (max-width: 480px) {
+  .signature {
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .signature {
+    font-size: 32px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .signature {
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a i {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
 body {
   margin: 0;
   min-height: 100vh;
@@ -78,7 +573,7 @@ main {
 }
 main article {
   margin: 3% 1%;
-  background-color: #E8EBD6;
+  background-color: white;
   padding: 24px;
   text-align: center;
 }
@@ -97,114 +592,4 @@ main article section img {
   height: auto;
   -o-object-fit: contain;
      object-fit: contain;
-}
-
-@media screen and (max-width: 480px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 36px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 12px;
-  }
-  .nav-items a {
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  .signature {
-    font-size: 24px;
-    display: flex;
-    justify-content: center;
-  }
-  .webdev {
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials {
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials a {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 42px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 14px;
-  }
-  .nav-items a {
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  .signature {
-    font-size: 32px;
-    display: flex;
-    justify-content: center;
-  }
-  .webdev {
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials {
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials a {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 48px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 16px;
-  }
-  .nav-items a {
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  .signature {
-    font-size: 36px;
-    display: flex;
-    justify-content: center;
-  }
-  .webdev {
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials {
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials a i {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
-}
-
-/*# sourceMappingURL=diary.css.map */
+}/*# sourceMappingURL=diary.css.map */
