--- a/styling/pages/enquiry.css
+++ b/styling/pages/enquiry.css
@@ -1,15 +1,18 @@
 h1 {
   font-family: "Abril Fatface", cursive;
 }
+
 h2 {
   font-family: "Abril Fatface", cursive;
   text-align: center;
 }
+
 p {
   font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
   line-height: 1.5;
 }
+
 ul li {
   font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
@@ -19,12 +22,15 @@ ul li {
 .name {
   font-family: "Abril Fatface", cursive;
 }
+
 .nav-items {
   font-family: "Raleway", sans-serif;
 }
+
 .signature {
   font-family: "Abril Fatface", cursive;
 }
+
 .webdev {
   font-family: "Raleway", sans-serif;
 }
@@ -32,12 +38,156 @@ ul li {
 label {
   font-family: "Raleway", sans-serif;
 }
+
 .form-input {
   font-family: "Raleway", sans-serif;
 }
+
 .form-message {
   font-family: "Raleway", sans-serif;
 }
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
+footer {
+  background-color: #F95A8A;
+  color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+}
+footer .signature {
+  display: flex;
+  justify-content: center;
+}
+footer .signature img {
+  margin-bottom: -2%;
+  width: 40%;
+  height: auto;
+}
+footer .socials a i {
+  text-decoration: none;
+  color: white;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+@media screen and (max-width: 480px) {
+  .signature {
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .signature {
+    font-size: 32px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .signature {
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a i {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
 #submit {
   font-family: "Raleway", sans-serif;
 }
@@ -46,12 +196,17 @@ header {
   background-color: white;
   text-align: center;
 }
-header .name a {
-  text-decoration: none;
-  color: #21453E;
+header .heading-logo {
+  display: flex;
+  justify-content: center;
+}
+header .heading-logo img {
+  padding-top: 1%;
+  width: 60%;
+  height: auto;
 }
 header .nav-items a {
-  color: #21453E;
+  color: black;
   text-decoration: none;
   padding-bottom: 20px;
 }
@@ -59,8 +214,261 @@ header .nav-items a:hover {
   text-decoration: underline;
 }
 
+@media screen and (max-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
+header {
+  background-color: white;
+  text-align: center;
+}
+header .heading-logo {
+  display: flex;
+  justify-content: center;
+}
+header .heading-logo img {
+  padding-top: 1%;
+  width: 60%;
+  height: auto;
+}
+header .nav-items a {
+  color: black;
+  text-decoration: none;
+  padding-bottom: 20px;
+}
+header .nav-items a:hover {
+  text-decoration: underline;
+}
+
+@media screen and (max-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
 footer {
-  background-color: #21453E;
+  background-color: #F95A8A;
   color: white;
   padding: 20px;
   display: flex;
@@ -68,11 +476,85 @@ footer {
   flex-grow: 1;
   justify-content: center;
 }
+footer .signature {
+  display: flex;
+  justify-content: center;
+}
+footer .signature img {
+  margin-bottom: -2%;
+  width: 40%;
+  height: auto;
+}
 footer .socials a i {
   text-decoration: none;
   color: white;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
+@media screen and (max-width: 480px) {
+  .signature {
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .signature {
+    font-size: 32px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .signature {
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a i {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
 body {
   margin: 0;
   min-height: 100vh;
@@ -124,7 +606,7 @@ body main form .submit-btn .btn-text {
   border: 2px solid white;
   border-radius: 5px;
   color: white;
-  font-family: "Raleway", sans-serif;
+  font-family: "Quicksand", sans-serif;
   height: 2.2rem;
 }
 body main form .submit-btn .btn-text:hover {
@@ -132,87 +614,14 @@ body main form .submit-btn .btn-text:hover {
   color: #588077;
 }
 body main .contact-section {
-  background-color: #E8EBD6;
+  background-color: white;
   padding: 7%;
   display: flex;
   flex-direction: column;
   color: #21453E;
   text-align: center;
 }
-
-@media screen and (max-width: 480px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 36px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 12px;
-  }
-  .nav-items a {
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  .signature {
-    font-size: 24px;
-    display: flex;
-    justify-content: center;
-  }
-  .webdev {
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials {
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials a {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 42px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 14px;
-  }
-  .nav-items a {
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  .signature {
-    font-size: 32px;
-    display: flex;
-    justify-content: center;
-  }
-  .webdev {
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials {
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials a {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
   body main {
     display: flex;
     flex-direction: row;
@@ -235,45 +644,10 @@ body main .contact-section {
     margin-right: 0;
     margin-bottom: 0;
     height: auto;
-    background-color: #E8EBD6;
+    background-color: white;
   }
   body main .contact-section .contact-words {
     text-align: right;
     align-self: stretch;
   }
-  .name {
-    margin-bottom: 16px;
-    font-size: 48px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 16px;
-  }
-  .nav-items a {
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  .signature {
-    font-size: 36px;
-    display: flex;
-    justify-content: center;
-  }
-  .webdev {
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials {
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials a i {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
-}
-
-/*# sourceMappingURL=enquiry.css.map */
+}/*# sourceMappingURL=enquiry.css.map */
