--- a/styling/pages/home.css
+++ b/styling/pages/home.css
@@ -1,15 +1,18 @@
 h1 {
   font-family: "Abril Fatface", cursive;
 }
+
 h2 {
   font-family: "Abril Fatface", cursive;
   text-align: center;
 }
+
 p {
   font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
   line-height: 1.5;
 }
+
 ul li {
   font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
@@ -19,27 +22,103 @@ ul li {
 .name {
   font-family: "Abril Fatface", cursive;
 }
+
 .nav-items {
   font-family: "Raleway", sans-serif;
 }
+
 .signature {
   font-family: "Abril Fatface", cursive;
 }
+
 .webdev {
   font-family: "Raleway", sans-serif;
 }
 
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
 
 header {
   background-color: white;
   text-align: center;
 }
-header .name a {
-  text-decoration: none;
-  color: #21453E;
+header .heading-logo {
+  display: flex;
+  justify-content: center;
+}
+header .heading-logo img {
+  padding-top: 1%;
+  width: 60%;
+  height: auto;
 }
 header .nav-items a {
-  color: #21453E;
+  color: black;
   text-decoration: none;
   padding-bottom: 20px;
 }
@@ -47,78 +126,7 @@ header .nav-items a:hover {
   text-decoration: underline;
 }
 
-footer {
-  background-color: #21453E;
-  color: white;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  justify-content: center;
-}
-footer .socials a i {
-  text-decoration: none;
-  color: white;
-}
-
-body {
-  margin: 0;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-}
-
-body {
-  background-color: #21453E;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-body .tagline {
-  color: white;
-  padding: 10%;
-  text-align: center;
-  width: 80%;
-}
-body .tagline p {
-  padding-bottom: 5%;
-}
-body .meet-btn {
-  background-color: #21453E;
-  border: 2px solid white;
-  border-radius: 5px;
-  font-family: "Raleway", sans-serif;
-  height: 2.2rem;
-}
-body .meet-btn a {
-  text-decoration: none;
-  color: white;
-}
-body .meet-btn:hover {
-  background-color: white;
-  color: #21453E;
-}
-body .meet-btn:hover a {
-  text-decoration: none;
-  color: #21453E;
-}
-body .cafe-pic {
-  display: flex;
-  justify-content: center;
-  background-color: #588077;
-}
-body .cafe-pic img {
-  padding: 10%;
-  width: 80%;
-  height: auto;
-}
-
 @media screen and (max-width: 480px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 36px;
-  }
   .nav-items {
     width: 100%;
     display: flex;
@@ -129,6 +137,110 @@ body .cafe-pic img {
     padding-left: 2%;
     padding-right: 2%;
   }
+}
+@media screen and (min-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
+footer {
+  background-color: #F95A8A;
+  color: white;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+}
+footer .signature {
+  display: flex;
+  justify-content: center;
+}
+footer .signature img {
+  margin-bottom: -2%;
+  width: 40%;
+  height: auto;
+}
+footer .socials a i {
+  text-decoration: none;
+  color: white;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+@media screen and (max-width: 480px) {
   .signature {
     font-size: 24px;
     display: flex;
@@ -145,26 +257,11 @@ body .cafe-pic img {
     justify-content: center;
   }
   .socials a {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 42px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 14px;
-  }
-  .nav-items a {
     padding-left: 2%;
     padding-right: 2%;
   }
+}
+@media screen and (min-width: 480px) {
   .signature {
     font-size: 32px;
     display: flex;
@@ -181,26 +278,11 @@ body .cafe-pic img {
     justify-content: center;
   }
   .socials a {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 48px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 16px;
-  }
-  .nav-items a {
     padding-left: 2%;
     padding-right: 2%;
   }
+}
+@media screen and (min-width: 1024px) {
   .signature {
     font-size: 36px;
     display: flex;
@@ -217,9 +299,75 @@ body .cafe-pic img {
     justify-content: center;
   }
   .socials a i {
-    padding-left: 3%;
-    padding-right: 3%;
+    padding-left: 2%;
+    padding-right: 2%;
   }
+}
+body {
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+body {
+  background: linear-gradient(to bottom, #FFC01D, #FF805F);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+body:before {
+  content: "";
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: -1;
+  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.2), #F95A8A 80%);
+}
+
+body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+body .tagline {
+  color: black;
+  padding: 10%;
+  text-align: center;
+  width: 80%;
+}
+body .tagline p {
+  padding-bottom: 5%;
+}
+body .meet-btn {
+  background-color: #F95A8A;
+  border: 1px solid black;
+  border-radius: 5px;
+  font-family: "Raleway", sans-serif;
+  height: 2.2rem;
+}
+body .meet-btn a {
+  text-decoration: none;
+  color: black;
+}
+body .meet-btn:hover {
+  background-color: #FF805F;
+}
+body .meet-btn:hover a {
+  text-decoration: none;
+}
+body .cafe-pic {
+  display: flex;
+  justify-content: center;
+}
+body .cafe-pic img {
+  padding: 10%;
+  width: 80%;
+  height: auto;
+}
+@media screen and (min-width: 1024px) {
   body main .tagline h2 {
     font-size: 2.1rem;
   }
