--- a/styling/pages/home.scss
+++ b/styling/pages/home.scss
@@ -1,13 +1,29 @@
 @import "./index";
 
+body {	
+	background: linear-gradient(to bottom, $yellow, $orange);
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+body:before{
+	content:'';
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	z-index: -1;
+	background: linear-gradient(to right bottom, rgba(255,255,255,0.2), $pink 80%);
+}
+
+
 body {
-  background-color: $primary-color;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 
   .tagline {
-    color: white;
+    color: black;
     padding: 10%;
     text-align: center;
     width: 80%;
@@ -19,24 +35,22 @@ body {
 
   // button through to meet me page
   .meet-btn {
-    background-color: $primary-color;
-    border: 2px solid white;
+    background-color: $pink;
+    border: 1px solid black;
     border-radius: 5px;
-    font-family: "Quicksand", sans-serif;
+    font-family: "Raleway", sans-serif;
     height: 2.2rem;
 
     a {
       text-decoration: none;
-      color: white;
+      color: black;
     }
 
     &:hover {
-      background-color: white;
-      color: $primary-color;
+      background-color: $orange;
 
       a {
         text-decoration: none;
-        color: $primary-color;
       }
     }
   }
@@ -44,7 +58,6 @@ body {
   .cafe-pic {
     display: flex;
     justify-content: center;
-    background-color: $secondary-color;
 
     img {
       padding: 10%;
