--- a/styling/pages/meet.css
+++ b/styling/pages/meet.css
@@ -1,15 +1,18 @@
 h1 {
   font-family: "Abril Fatface", cursive;
 }
+
 h2 {
   font-family: "Abril Fatface", cursive;
   text-align: center;
 }
+
 p {
   font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
   line-height: 1.5;
 }
+
 ul li {
   font-family: "Raleway", sans-serif;
   font-size: 0.9rem;
@@ -19,13 +22,85 @@ ul li {
 .name {
   font-family: "Abril Fatface", cursive;
 }
+
 .nav-items {
   font-family: "Raleway", sans-serif;
 }
+
 .signature {
   font-family: "Abril Fatface", cursive;
 }
+
 .webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
   font-family: "Raleway", sans-serif;
 }
 
@@ -33,12 +108,17 @@ header {
   background-color: white;
   text-align: center;
 }
-header .name a {
-  text-decoration: none;
-  color: #21453E;
+header .heading-logo {
+  display: flex;
+  justify-content: center;
+}
+header .heading-logo img {
+  padding-top: 1%;
+  width: 60%;
+  height: auto;
 }
 header .nav-items a {
-  color: #21453E;
+  color: black;
   text-decoration: none;
   padding-bottom: 20px;
 }
@@ -46,8 +126,97 @@ header .nav-items a:hover {
   text-decoration: underline;
 }
 
+@media screen and (max-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .nav-items {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+  }
+  .nav-items a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+h1 {
+  font-family: "Abril Fatface", cursive;
+}
+
+h2 {
+  font-family: "Abril Fatface", cursive;
+  text-align: center;
+}
+
+p {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+ul li {
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5;
+}
+
+.name {
+  font-family: "Abril Fatface", cursive;
+}
+
+.nav-items {
+  font-family: "Raleway", sans-serif;
+}
+
+.signature {
+  font-family: "Abril Fatface", cursive;
+}
+
+.webdev {
+  font-family: "Raleway", sans-serif;
+}
+
+label {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-input {
+  font-family: "Raleway", sans-serif;
+}
+
+.form-message {
+  font-family: "Raleway", sans-serif;
+}
+
+#submit {
+  font-family: "Raleway", sans-serif;
+}
+
 footer {
-  background-color: #21453E;
+  background-color: #F95A8A;
   color: white;
   padding: 20px;
   display: flex;
@@ -55,11 +224,85 @@ footer {
   flex-grow: 1;
   justify-content: center;
 }
+footer .signature {
+  display: flex;
+  justify-content: center;
+}
+footer .signature img {
+  margin-bottom: -2%;
+  width: 40%;
+  height: auto;
+}
 footer .socials a i {
   text-decoration: none;
   color: white;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
+@media screen and (max-width: 480px) {
+  .signature {
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 480px) {
+  .signature {
+    font-size: 32px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .signature {
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+  }
+  .webdev {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials {
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+  }
+  .socials a i {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
 body {
   margin: 0;
   min-height: 100vh;
@@ -69,7 +312,7 @@ body {
 }
 
 body {
-  background-color: #E8EBD6;
+  background-color: white;
 }
 body main {
   display: flex;
@@ -99,7 +342,7 @@ body main .resume .resume-btn {
   background-color: #21453E;
   border: 2px solid white;
   border-radius: 5px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Quicksand", sans-serif;
   height: 2.2rem;
   margin-bottom: 10%;
 }
@@ -119,10 +362,10 @@ body main .pictures {
   background-color: #588077;
 }
 body main .stories-btn {
-  background-color: #E8EBD6;
+  background-color: white;
   border: 2px solid #588077;
   border-radius: 5px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Quicksand", sans-serif;
   height: 2.2rem;
   margin-bottom: 15%;
 }
@@ -132,47 +375,13 @@ body main .stories-btn a {
 }
 body main .stories-btn:hover {
   background-color: #588077;
-  color: #E8EBD6;
+  color: white;
 }
 body main .stories-btn:hover a {
   text-decoration: none;
-  color: #E8EBD6;
+  color: white;
 }
-
 @media screen and (max-width: 480px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 36px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 12px;
-  }
-  .nav-items a {
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  .signature {
-    font-size: 24px;
-    display: flex;
-    justify-content: center;
-  }
-  .webdev {
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials {
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials a {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
   body main .pictures {
     display: flex;
     flex-direction: column;
@@ -189,41 +398,7 @@ body main .stories-btn:hover a {
     padding-bottom: 10%;
   }
 }
-
 @media screen and (min-width: 480px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 42px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 14px;
-  }
-  .nav-items a {
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  .signature {
-    font-size: 32px;
-    display: flex;
-    justify-content: center;
-  }
-  .webdev {
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials {
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials a {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
   body main .bio {
     padding: 7%;
   }
@@ -240,41 +415,7 @@ body main .stories-btn:hover a {
     width: 31%;
   }
 }
-
-@media screen and (min-width: 768px) {
-  .name {
-    margin-bottom: 16px;
-    font-size: 48px;
-  }
-  .nav-items {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-size: 16px;
-  }
-  .nav-items a {
-    padding-left: 2%;
-    padding-right: 2%;
-  }
-  .signature {
-    font-size: 36px;
-    display: flex;
-    justify-content: center;
-  }
-  .webdev {
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials {
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-  }
-  .socials a i {
-    padding-left: 3%;
-    padding-right: 3%;
-  }
+@media screen and (min-width: 1024px) {
   body .bio {
     padding: 5%;
   }
