redesigned blog pages and theme colours

--- a/styling/defaults/_color.scss
+++ b/styling/defaults/_color.scss
@@ -1,8 +1,15 @@
-$primary-color: #21453E;
-$secondary-color: #588077;
-$base-color: white;
 $pink: #F95A8A;
-$orange: #FF805F;
+$orange: #FF7F31;
+$peach: #FF7080;
 $yellow: #FFC01D;
-$purple: #9F52FF;
+$purple: #B962EB;
 $teal: #15D2B8;
+
+$light-yellow: #FFF3B7;
+$light-peach: #FFD895;
+$light-pink1: #FF92A1;
+$light-pink2: #FF92A1;
+$light-orange: #FFC99E;
+
+$dark-pink: #E04776;
+$dark-orange: #FF5F34;
