--- a/styling/pages/home.scss
+++ b/styling/pages/home.scss
@@ -1,5 +1,6 @@
 @import "./index";
 
+// Gradient background:
 body {	
 	background: linear-gradient(to bottom, $yellow, $orange);
 	background-size: 100%;
