--- a/styling/pages/blog.scss
+++ b/styling/pages/blog.scss
@@ -2,15 +2,36 @@
 @import "../components/header";
 @import "./index";
 
+// Gradient background:
+body {	
+	background: linear-gradient(to bottom, $light-yellow, $peach, $light-orange, $pink, $orange, $light-pink2);
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+body:before{
+	content:'';
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	z-index: -1;
+	background: linear-gradient(to right bottom, rgba(255,255,255,0.2), $yellow 85%);
+}
+
   main {
-    background-color: $base-color;
-    color: $primary-color;
-    padding: 10%;
+    color: black;
+    padding: 12%;
     text-align: justify;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
   
+    .container {
+      background-color: rgba(255,255,255,0.6);
+      padding: 8%;
+    }
+
   img {
     width: 100%;
   }
@@ -24,25 +45,25 @@
 
   //button through to enquiry page
   .enquiry-btn {
-    background-color: $base-color;
-    border: 2px solid $secondary-color;
+    background-color: $yellow;
+    border: 1px solid black;
     border-radius: 5px;
-    font-family: "Quicksand", sans-serif;
+    font-family: "Raleway", sans-serif;
     height: 2.2rem;
     margin-top: 5%;
 
     a {
       text-decoration: none;
-      color: $secondary-color;
+      color: black;
     }
 
     &:hover {
-      background-color: $secondary-color;
-      color: $base-color;
+      background-color: $orange;
+      color: black;
 
       a {
         text-decoration: none;
-        color: $base-color;
+        color: black;
       }
     }
   }
