--- a/styling/pages/diary.css
+++ b/styling/pages/diary.css
@@ -564,7 +564,7 @@ body {
 }
 
 main {
-  background-color: #21453E;
+  background-color: #FF7F31;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -573,16 +573,16 @@ main {
 }
 main article {
   margin: 3% 1%;
-  background-color: white;
+  background-color: #FFF3B7;
   padding: 24px;
   text-align: center;
 }
 main article a {
   text-decoration: none;
-  color: #21453E;
+  color: black;
 }
 main article a:hover {
-  color: #588077;
+  color: #E04776;
 }
 main article section {
   width: 220px;
