--- a/styling/pages/enquiry.scss
+++ b/styling/pages/enquiry.scss
@@ -3,7 +3,7 @@
 @import "./index";
 
 body {
-  background-color: $secondary-color;
+  background-color: $light-pink1;
   margin-bottom: 0;
 
   main {
@@ -11,12 +11,12 @@ body {
     flex-direction: column;
 
     .please {
-      color: white;
+      color: black;
       padding-top: 5%;
     }
 
     form {
-      color: white;
+      color: black;
       padding: 10%;
       padding-top: 0%;
 
@@ -46,27 +46,27 @@ body {
         justify-content: center;
 
         .btn-text {
-          background-color: $secondary-color;
-          border: 2px solid white;
+          background-color: $peach;
+          border: 1px solid black;
           border-radius: 5px;
-          color: white;
-          font-family: "Quicksand", sans-serif;
+          color: black;
+          font-family: "Raleway", sans-serif;
           height: 2.2rem;
 
           &:hover {
-            background-color: white;
-            color: $secondary-color;
+            background-color: $orange;
+            color: black
           }
         }
       }
     }
 
     .contact-section {
-      background-color: $base-color;
+      background-color: $light-orange;
       padding: 7%;
       display: flex;
       flex-direction: column;
-      color: $primary-color;
+      color: black;
       text-align: center;
     }
   }
@@ -97,7 +97,7 @@ body {
         margin-right: 0;
         margin-bottom: 0;
         height: auto;
-        background-color: $base-color;
+        background-color: $light-orange;
 
         .contact-words {
           text-align: right;
